frontend/ops/k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        deployment.kubernetes.io/revision: "1"
    labels:
        app: frontend
    name: frontend
spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            app: frontend
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 25%
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - image: xxxxxxxxxxxxxxxxxxxxxxx/workshop/frontend
                  imagePullPolicy: Always
                  name: frontend
                  resources: {}
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
                  ports:
                      - name: frontend-http
                        containerPort: 80
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 30
