frontend/ops/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
    labels:
        app: frontend
    name: frontend
spec:
    ports:
        - port: 3000
          targetPort: frontend-http
    selector:
        app: frontend
    sessionAffinity: None
    type: ClusterIP
